# personal_drafts

./: .gitignore  01_data.ipynb  decorators.py  interactive_experiment.py  main.py  ml_pipeline_sample_v1.py  model.pth  pyproject.toml  test.parquet  test_ai_engineer.ipynb  test_logging.py  utils.py  xgbranker_test.ipynb
.cursor/rules/: mentor.mdc  mentor2.mdc
async_exercises/: test_async.py  test_async_myself.py  test_async_server.py  test_async_server_commented.py  test_async_tim.py  test_event.py  test_lock.py
datasets/: base_dataset.py  data_processing.py  dataset_factory.py  inference_dataset.py  training_dataset.py  utils2.py  validation_dataset.py
examples/datasets/: data.parquet  factory_concept.ipynb
io/: dataloader.py  io_base.py  local.py  s3.py  s3_ddd(deprecated).py  s3_new_req.py  s3_og.py
logs/: app.json
